adds a slew of apis and starts on material work
